Fix post headers wrong size

--- a/wp-content/themes/mission-news-carletonian/style.css
+++ b/wp-content/themes/mission-news-carletonian/style.css
@@ -3026,7 +3026,6 @@ a img {
 .layout-rows-excerpt .rows-excerpt.has-post-thumbnail .post-header {
   display: inline-block;
   vertical-align: middle;
-  width: calc(70% - 17px);
 }
 
 .layout-rows-excerpt .rows-excerpt > article {
